--- a/workflows/git-actions.yaml
+++ b/workflows/git-actions.yaml
@@ -2,6 +2,11 @@ name: Compose automatizado
 
 on:
   push:
+    branches: ["master"]
+
+env:
+  DOCKER_HUB_USERNAME: juanfu224
+
 
 jobs:
   docker:
@@ -16,9 +21,6 @@ jobs:
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
-      -
-        name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
